fix: add stable scrollbar gutter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,19 +51,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-html,
-body {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-html::-webkit-scrollbar,
-body::-webkit-scrollbar {
-  display: none;
-  height: 0;
-  width: 0;
+  scrollbar-gutter: stable;
 }
 
 ::view-transition-old(*),
